# domain/src/main/java/sk/posam/fsa/discussion/exceptions/ResourceNotFoundException.java
@@ -17,4 +17,7 @@ public class ResourceNotFoundException extends RuntimeException {
     public ResourceNotFoundException(Throwable cause) {
         super(cause);
     }
+
+    public ResourceNotFoundException(String question, Long questionId) {
+    }
 }
