# inbound-controller-ws/src/main/java/sk/posam/fsa/discussion/mapper/QuestionMapper.java
@@ -5,6 +5,7 @@ import org.mapstruct.Mapping;
 import sk.posam.fsa.discussion.Question;
 import sk.posam.fsa.discussion.rest.dto.CreateQuestionRequestDto;
 import sk.posam.fsa.discussion.rest.dto.QuestionDto;
+import sk.posam.fsa.discussion.rest.dto.QuestionPublicDto;
 import sk.posam.fsa.discussion.rest.dto.UpdateQuestionRequestDto;
 
 import java.util.List;
@@ -18,6 +19,7 @@ public interface QuestionMapper {
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "lesson", ignore = true)
     Question toDomain(UpdateQuestionRequestDto dto);
+    List<QuestionPublicDto> toPublicDto(List<Question> questions);
 
     QuestionDto toDto(Question question);
     List<QuestionDto> toDto(List<Question> questions);
